<resources>
    <string name="app_name">Toretto</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginTitle">Toretto Trucking</string>
    <string name="ingresar">Ingresar</string>
    <string name="salir">Salir</string>
    <string name="informacion">Informacion</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="viajesactuales">Pedidos en Ruta</string>
    <string name="viajesterminados">Pedidos Terminados</string>
    <string name="pedidos">Pedidos</string>
    <string-array name="productos">
        <item>atun</item>
    </string-array>
    <string-array name="origenes">
        <item>Jalisco</item>
    </string-array>
    <string-array name="destinos">
        <item>Colima</item>
    </string-array>

    <string name="col1">#</string>
    <string name="col2">Ruta</string>
    <string name="col3">Precio</string>
    <string name="col4">Ver</string>

</resources>